--- a/themes/default/css/styles.less
+++ b/themes/default/css/styles.less
@@ -183,11 +183,10 @@ section {
          .post-wall {
             padding: 0px;
 
-            li {
-               float: left;
-               display: block;
-               width: 280px;
-               height: 280px;
+            li {               
+               display: inline-block;
+               width: 250px;
+               height: 250px;
                margin: 10px;
                border:1px solid black;
                position: relative;
@@ -198,7 +197,7 @@ section {
                   text-decoration: none;
                   bottom:0px;               
                   padding: 5px;
-                  width: 270px;               
+                  width: 250px;               
                   background-color: rgba(0, 0, 0, 0.83);
                   color: #FFF;
                   opacity: 0;               
