Add videos youtube

--- a/_layouts/default.htm
+++ b/_layouts/default.htm
@@ -171,7 +171,8 @@
 
             // YOUTUBE
             $.getJSON("http://gdata.youtube.com/feeds/api/users/" + it.User.youtube + "/favorites?alt=jsonc&v=2", function(json) {
-                it.Videos.concat(json.data.items);
+                for (var i in json.data.items) 
+                    it.Videos.push(json.data.items[i]);                
             });
 
 
