Add videos youtube

--- a/_layouts/default.htm
+++ b/_layouts/default.htm
@@ -171,8 +171,8 @@
 
             // YOUTUBE
             $.getJSON("http://gdata.youtube.com/feeds/api/users/" + it.User.youtube + "/favorites?alt=jsonc&v=2", function(json) {
-                for (var i in json.data.items) 
-                    it.Videos.push(json.data.items[i]);                
+                for (var i in json.data.items) if (i < 2)
+                    it.Videos.push(json.data.items[i].video);                
             });
 
 
