--- a/_layouts/default.htm
+++ b/_layouts/default.htm
@@ -136,7 +136,7 @@
 
     ViewModel = {
         
-        User : {
+        User : ko.observable({
             name: "sidneylimafilho",
             mail: "https://docs.google.com/spreadsheet/viewform?formkey=dEtLSzNWdXlnanJMdTN6WmtQb2VnMlE6MQ",
             twitter: "sidneylimafilho",
@@ -150,7 +150,7 @@
                 name: "sidneylimafilho",
                 tag: "Favorite"
             }
-        },
+        }),
 
         Videos : ko.observableArray([]),
     
@@ -171,24 +171,28 @@
 
             // YOUTUBE
             $.getJSON("http://gdata.youtube.com/feeds/api/users/" + it.User.youtube + "/favorites?alt=jsonc&v=2", function(json) {
-                for (var i in json.data.items) if (i < 3)
-                    it.Videos.push(json.data.items[i].video);                
+                for (var i in json.data.items) if (item = json.data.items[i] && i < 3) if (item.video.accessControl.embed ==='allowed'){
+                    it.Videos.push(item.video);                
+                }
             });
 
 
             ko.applyBindings(it);
+        },
+
+        ShowVideo:function(){
+            alert("Clicked " + $data);
         }       
+
     };
-    
+
+    ViewModel.Initialize();
+/*  
     google.load("feeds", "1");
 
     // FEEDS            
     google.setOnLoadCallback(function feeds() {
 
-        
-        ViewModel.Initialize();
-       
-/*
         // TWITTER
         $.getJSON("http://api.twitter.com/1/statuses/user_timeline.json?screen_name=" + user.twitter + "&callback=?", function(json) {
             document.title = json[0].user.description + " - " + json[0].user.name;
@@ -233,22 +237,77 @@
             });
             $('#apresentacoes').append('<a class="more" href="http://www.slideshare.net/' + user.slideshare + '" target="_blank">+ apresentações</a>')
         });
-        */
+        
     });
-
+*/
 </script>
 <script type="text/html" id="tagsTemplate">
     <h2 class = "post_title" > {. {page.title } } </h2>
-    <ul>  <li class="archive_list">  <time style="color:#666;font-size:11px;" datetime='{.{post.date | date: "%Y-%m-%d"}}'>{.{post.date | date: "%m/ % d / % y "}}</time>  
-    <a class="archive_list_article_link " href='{.{post.url}}'>{.{post.title}}</a>  
-    <p class="summary ">                     <span>{.{post.summary}}</span>  
-    <ul class="tag_list "> 
-    {.% for tag in post.tags %} 
-    <li class="inline archive_list ">  <a class="tag_list_link " href=" / tag / {. {tag } } ">{.{ tag }}</a> 
-    </li>
-     {.%endfor%} 
-    </ul>  
-    </p>  
-    </li> 
-    </ul>     
+    <ul>
+ 
+ <li class="archive_list">
+ 
+ <time style="color:#666;font-size:11px;" datetime='{.{post.date | date: "%Y-%m-%d"}}'>{.{post.date | date: "%m/ % d / % y "}}</time>
+ 
+ 
+    <a class="archive_list_article_link " href='{.{post.url}}'>{.{post.title}}</a>
+ 
+ 
+    <p class="summary ">
+                    
+ <span>{.{post.summary}}</span>
+ 
+ 
+    <ul class="tag_list ">
+ 
+    {.% for tag in post.tags %}
+ 
+    <li class="inline archive_list ">
+ 
+ <a class="tag_list_link " href=" / tag / {. {tag } } ">{.{ tag }}</a>
+ 
+
+    </li>
+
+     {.%endfor%}
+ 
+    </ul>
+ 
+ 
+    </p>
+ 
+ 
+    </li>
+ 
+
+    </ul>
+ 
+
+
+
+
+
+
+ 
+
+
+
+
+
+
+ 
+
+
+
+
+
+
+ 
+
+
+
+
+
+
+ 
 </script>
