--- a/themes/default/css/styles.less
+++ b/themes/default/css/styles.less
@@ -180,14 +180,14 @@ section {
 
          h1 { border-bottom: 1px solid black; }
 
-         .post-wall {
+         .post-wall ul {
             padding: 0px;
 
             li {               
                display: inline-block;
-               width: 250px;
-               height: 250px;
-               margin: 10px;
+               width: 270px;
+               height: 270px;
+               margin: 0px 30px 30px 0px;
                border:1px solid black;
                position: relative;
 
@@ -197,19 +197,18 @@ section {
                   text-decoration: none;
                   bottom:0px;               
                   padding: 5px;
-                  width: 250px;               
+                  width: 260px;               
                   background-color: rgba(0, 0, 0, 0.83);
                   color: #FFF;
-                  opacity: 0;               
+                                
                   .transition(opacity, 400ms);
 
-                  small{ display: block; color: #CCC; }
+                  small{ display: none; opacity: 0; color: #CCC; }
                }            
             }
 
-            li:hover a{            
-               opacity: 1;
-               color: #FFF;
+            li:hover{
+               a:hover small{ display: block; opacity: 1; }
             }
          }   
 
