just some fixes in grid layout on first page

--- a/themes/default/css/all.less
+++ b/themes/default/css/all.less
@@ -203,12 +203,12 @@ section {
                                 
                   .transition(opacity, 400ms);
 
-                  small{ display: none; opacity: 0; color: #CCC; }
+                  small{ opacity: 0; color: #CCC; }
                }            
             }
 
             li:hover{
-               a:hover small{ display: block; opacity: 1; }
+               a:hover small{ opacity: 1; }
             }
          }   
 
