--- a/themes/default/css/all.less
+++ b/themes/default/css/all.less
@@ -187,7 +187,7 @@ section {
                display: inline-block;
                width: 270px;
                height: 270px;
-               margin: 0px 30px 30px 0px;
+               margin: 0px 18px 10px 0px;
                border:1px solid black;
                position: relative;
 
@@ -199,19 +199,19 @@ section {
                   padding: 5px;
                   width: 260px;               
                   background-color: rgba(0, 0, 0, 0.83);
-                  color: #FFF;                  
+                  color: #FFF; 
+                  opacity: 0;
+                  .transition(opacity, 400ms);                 
 
                   small{ 
-                    display: none; 
-                    opacity: 0; 
-                    color: #CCC; 
-                    .transition(opacity, 400ms);
+                    display: block;                     
+                    color: #DDD;                    
                   }
                }            
             }
 
             li:hover{
-               a:hover small{ display: block; opacity: 1; }
+               a { opacity: 1; }
             }
          }   
 
