just some fixes in grid layout on first page

--- a/themes/default/css/all.less
+++ b/themes/default/css/all.less
@@ -203,10 +203,7 @@ section {
                   opacity: 0;
                   .transition(opacity, 400ms);                 
 
-                  small{ 
-                    display: block;                     
-                    color: #DDD;                    
-                  }
+                  small{ display: block; }
                }            
             }
 
