--- a/themes/default/css/all.less
+++ b/themes/default/css/all.less
@@ -170,7 +170,7 @@ section {
    }
 
    .left-side {
-      width: 610px;
+      width: 586px;
       padding-right: 24px;
       float: left;
       overflow: hidden;      
@@ -184,7 +184,7 @@ section {
             display: inline-block;
             width: 270px;
             height: 270px;
-            margin: 0px 18px 10px 0px;
+            margin: 0px 18px 18px 0px;
             border:1px solid black;
             position: relative;
 
@@ -193,14 +193,17 @@ section {
                position: absolute;
                text-decoration: none;
                bottom:0px;               
-               padding: 5px;
-               width: 260px;               
-               background-color: rgba(0, 0, 0, 0.83);
-               color: #FFF; 
+               padding: 5px;              
                opacity: 0;
                .transition(opacity, 400ms);                 
 
                small{ display: block; }
+
+               resume { 
+                  display: block; 
+                  background-color: rgba(0, 0, 0, 0.83);
+                  color: #FFF; 
+               }
             }            
          }
 
