--- a/themes/default/css/all.less
+++ b/themes/default/css/all.less
@@ -203,8 +203,9 @@ section {
                   display: block; 
                   background-color: rgba(0, 0, 0, 0.83);
                   color: #FFF; 
-                    bottom:0px;               
+                  bottom: 0px;               
                   padding: 5px;  
+                  position: absolute;
                }
             }            
          }
