--- a/themes/default/css/all.less
+++ b/themes/default/css/all.less
@@ -187,6 +187,9 @@ section {
             margin: 0px 18px 18px 0px;
             border:1px solid black;
             position: relative;
+            background-position: 0% 0%;
+            background-repeat: no-repeat;
+            .transition(background-position, 2000ms);
 
             a {             
                display: block;  
@@ -212,6 +215,7 @@ section {
 
          li:hover{
             a { opacity: 1; }
+            background-position: 100% 100%;
          }
       }   
 
