--- a/_layouts/default.htm
+++ b/_layouts/default.htm
@@ -134,7 +134,7 @@
 
     ViewModel = {
         
-        User : ko.observable({
+        User : {
             name: "sidneylimafilho",
             mail: "https://docs.google.com/spreadsheet/viewform?formkey=dEtLSzNWdXlnanJMdTN6WmtQb2VnMlE6MQ",
             twitter: "sidneylimafilho",
@@ -148,7 +148,7 @@
                 name: "sidneylimafilho",
                 tag: "Favorite"
             }
-        }),
+        },
 
         Videos : ko.observableArray([]),
     
