--- a/_layouts/default.htm
+++ b/_layouts/default.htm
@@ -170,8 +170,8 @@
             // YOUTUBE
             $.getJSON("http://gdata.youtube.com/feeds/api/users/" + it.User.youtube + "/favorites?alt=jsonc&v=2", function(json) {
                 for (var i in json.data.items) 
-                    if (item = json.data.items[i] && i < 3) 
-                        if (item.video.accessControl.embed ==='allowed'){
+                    if (item = json.data.items[i]) 
+                        if(i < 3 && item.video.accessControl.embed ==='allowed'){
                             it.Videos.push(item.video);                
                         }
             });
