--- a/_layouts/default.htm
+++ b/_layouts/default.htm
@@ -62,9 +62,9 @@
         <section>
             <div class="super">
                 <div class="wrapper">
-                    <div class="content left-side">                        
+                    <div class="content left-side">
                         <div {% if page.categories %} class="{{page.categories}}" {% endif %}>{{ content }}
-                        </div>                        
+                        </div>
                     </div>
                     <div class="right-side">
                         <div class="widget">
@@ -131,10 +131,9 @@
 <script src="tags.js" type="text/javascript">
 </script>
 <script type="text/javascript">
-
     ViewModel = {
-        
-        User : {
+
+        User: {
             name: "sidneylimafilho",
             mail: "https://docs.google.com/spreadsheet/viewform?formkey=dEtLSzNWdXlnanJMdTN6WmtQb2VnMlE6MQ",
             twitter: "sidneylimafilho",
@@ -150,10 +149,11 @@
             }
         },
 
-        Videos : ko.observableArray([]),
-    
-        Initialize : function() {   
-            var it=this;         
+        MostRecentVideo: ko.observable(),
+        Videos: ko.observableArray([]),
+
+        Initialize: function() {
+            var it = this;
 
             // ICONES            
             $('.twitter').attr('href', 'http://twitter.com/' + it.User.twitter);
@@ -169,20 +169,24 @@
 
             // YOUTUBE
             $.getJSON("http://gdata.youtube.com/feeds/api/users/" + it.User.youtube + "/favorites?alt=jsonc&v=2", function(json) {
-                for (var i in json.data.items) 
+                for (var i in json.data.items)
                     if (item = json.data.items[i]) 
-                        if(i < 4 && item.video.accessControl.embed ==='allowed'){
-                            it.Videos.push(item.video);                
-                        }
+                        if (i < 4 && item.video.accessControl.embed === 'allowed') 
+                            if(i === 0) {
+                                it.MostRecentVideo(item.video);
+                            } else {
+                                it.Videos.push(item.video);
+                            }
+                        
             });
 
 
             ko.applyBindings(it);
         },
 
-        ShowVideo:function(){
+        ShowVideo: function() {
             alert("Clicked " + $data);
-        }       
+        }
 
     };
 
@@ -242,72 +246,84 @@
 */
 </script>
 <script type="text/html" id="tagsTemplate">
-    <h2 class = "post_title" > {. {page.title } } </h2>
-    <ul>
- 
- <li class="archive_list">
- 
- <time style="color:#666;font-size:11px;" datetime='{.{post.date | date: "%Y-%m-%d"}}'>{.{post.date | date: "%m/ % d / % y "}}</time>
- 
- 
-    <a class="archive_list_article_link " href='{.{post.url}}'>{.{post.title}}</a>
- 
- 
-    <p class="summary ">
-                    
- <span>{.{post.summary}}</span>
- 
- 
-    <ul class="tag_list ">
- 
-    {.% for tag in post.tags %}
- 
-    <li class="inline archive_list ">
- 
- <a class="tag_list_link " href=" / tag / {. {tag } } ">{.{ tag }}</a>
- 
-
-    </li>
-
-     {.%endfor%}
- 
-    </ul>
- 
- 
-    </p>
- 
- 
-    </li>
- 
-
-    </ul>
- 
-
-
-
-
-
-
- 
-
-
-
-
-
-
- 
-
-
-
-
-
-
- 
-
-
-
-
-
-
- 
+    < h2 class = "post_title" > {. {
+            page.title
+        }
+    } < /h2>
+    <ul>
+ 
+ <li class="archive_list">
+ 
+ <time style="color:#666;font-size:11px;" datetime='{.{post.date | date: "%Y-%m-%d"}}'>{.{post.date | date: "%m/ % d / % y "}}</time>
+ 
+ 
+    <a class="
+    archive_list_article_link " href='{.{post.url}}'>{.{post.title}}</a>
+ 
+ 
+    <p class="
+    summary ">
+                    
+ <span>{.{post.summary}}</span>
+ 
+ 
+    <ul class="
+    tag_list ">
+ 
+    {.% for tag in post.tags %}
+ 
+    <li class="
+    inline archive_list ">
+ 
+ <a class="
+    tag_list_link " href=" / tag / {. {
+            tag
+        }
+    }
+    ">{.{ tag }}</a>
+ 
+
+    </li>
+
+     {.%endfor%}
+ 
+    </ul>
+ 
+ 
+    </p>
+ 
+ 
+    </li>
+ 
+
+    </ul>
+ 
+
+
+
+
+
+
+ 
+
+
+
+
+
+
+ 
+
+
+
+
+
+
+ 
+
+
+
+
+
+
+ 
 </script>
