--- a/_layouts/default.htm
+++ b/_layouts/default.htm
@@ -149,7 +149,7 @@
             }
         },
 
-        MostRecentVideo: ko.observable(),
+        MostRecentVideo: ko.observable({id:''}),
         Videos: ko.observableArray([]),
 
         Initialize: function() {
