--- a/_layouts/default.htm
+++ b/_layouts/default.htm
@@ -131,15 +131,18 @@
 <script src="tags.js" type="text/javascript">
 </script>
 <script type="text/javascript">
-    ViewModel = {
-
-        User: {
+    function ViewModel(){
+        var it = this;
+        it.User = {
             name: "sidneylimafilho",
             mail: "https://docs.google.com/spreadsheet/viewform?formkey=dEtLSzNWdXlnanJMdTN6WmtQb2VnMlE6MQ",
             twitter: "sidneylimafilho",
             facebook: "sidneylimafilho",
             linkedin: "sidneylimafilho",
-            youtube: "TheSidneyLimaFilho",
+            youtube: {
+                name:"TheSidneyLimaFilho",
+                embedUrl:"http://www.youtube.com/embed/"
+            },
             github: "sidneylimafilho",
             slideshare: "sidneylimafilho",
             feed: "/rss.xml",
@@ -147,13 +150,12 @@
                 name: "sidneylimafilho",
                 tag: "Favorite"
             }
-        },
+        };
 
-        MostRecentVideo: ko.observable({id:''}),
-        Videos: ko.observableArray([]),
+        it.MostRecentVideo = ko.observable({id:''});
+        it.Videos= ko.observableArray([]);
 
-        Initialize: function() {
-            var it = this;
+        it.Initialize= function() {
 
             // ICONES            
             $('.twitter').attr('href', 'http://twitter.com/' + it.User.twitter);
@@ -168,7 +170,7 @@
 
 
             // YOUTUBE
-            $.getJSON("http://gdata.youtube.com/feeds/api/users/" + it.User.youtube + "/favorites?alt=jsonc&v=2", function(json) {
+            $.getJSON("http://gdata.youtube.com/feeds/api/users/" + it.User.youtube.name + "/favorites?alt=jsonc&v=2", function(json) {
                 for (var i in json.data.items)
                     if (item = json.data.items[i]) 
                         if (i < 4 && item.video.accessControl.embed === 'allowed') 
@@ -181,16 +183,16 @@
             });
 
 
-            ko.applyBindings(it);
-        },
+            ko.applyBindings(it);            
+        }   
 
-        ShowVideo: function() {
-            alert("Clicked " + $data);
-        }
+        it.ShowVideo = function() {
+            $(".youtube iframe").attr("src", it.User.youtube.embedUrl + this.id);
+        }    
 
     };
 
-    ViewModel.Initialize();
+    (var vm = new ViewModel()).Initialize();
 /*  
     google.load("feeds", "1");
 
