--- a/_layouts/default.htm
+++ b/_layouts/default.htm
@@ -192,7 +192,7 @@
 
     };
 
-    (var vm = new ViewModel()).Initialize();
+    (vm = new ViewModel()).Initialize();
 /*  
     google.load("feeds", "1");
 
