Add posts do banner

--- a/themes/default/css/all.css
+++ b/themes/default/css/all.css
@@ -42,7 +42,7 @@ footer {
 }
 header {
   position: absolute;
-  background-color: rgba(255, 255, 255, 0.65);
+  background-color: rgba(255, 255, 255, 0.88);
   border-bottom: 1px solid rgba(255, 255, 255, 0.8);
   /*.gradient(left top, left bottom, 0.95, rgba(255, 255, 255, 0.75), 1,  rgba(255, 255, 255, 0));*/
   padding: 4px 0px;
@@ -111,7 +111,6 @@ header menu ul li a {
 banner {
   position: relative;
   z-index: 1;
-  padding-top: 70px;
   display: block;
   height: 330px;
   background: url(../img/banner/nurture_seedling_in_hands_low_level.jpg);
@@ -121,12 +120,23 @@ banner {
   vertical-align: bottom;
 }
 banner .wrapper {
-  position: absolute;
-  bottom: 0px;
-  left: 50%;
-  margin-left: -430px;
-  /* .wrapper original width is 860px, then 50% is 430px */
+  position: relative;
+  height: 100%;
+  /*bottom: 0px;
+      left: 50%;
+      margin-left: -430px;  .wrapper original width is 860px, then 50% is 430px */
 
+}
+banner .wrapper .excerpt {
+  bottom: 0px;
+  position: absolute;
+  float: left;
+}
+banner .wrapper .post {
+  width: 80px;
+  height: 100%;
+  float: right;
+  margin-right: 3px;
 }
 banner h1 {
   text-shadow: 0px 0px 8px rgba(255, 255, 255, 0.5);
