Add posts do banner

--- a/themes/default/css/all.less
+++ b/themes/default/css/all.less
@@ -69,6 +69,8 @@ header {
          list-style:none;
          padding:0px;
          margin: 0px;
+         display: table-row;
+         width: 100%;
 
         /* background: #eee;
          background: -moz-linear-gradient(top, #f8f8f8 0%, #dddddd 100%);
@@ -84,11 +86,11 @@ header {
          
 
          li {
-            padding: 0px 10px;
+            padding: 5px 10px;
             display: table-cell;
-            /*border-right:1px solid #d2d2d2;*/
+            /*border-right:1px solid #d2d2d2;
             height:70px;
-            vertical-align: middle;
+            vertical-align: middle;*/
 
             a {               
                display:block;
