--- a/themes/default/css/all.css
+++ b/themes/default/css/all.css
@@ -74,6 +74,8 @@ header menu ul {
   list-style: none;
   padding: 0px;
   margin: 0px;
+  display: table-row;
+  width: 100%;
   /* background: #eee;
          background: -moz-linear-gradient(top, #f8f8f8 0%, #dddddd 100%);
          background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f8f8f8), color-stop(100%,#dddddd));
@@ -88,11 +90,12 @@ header menu ul {
 
 }
 header menu ul li {
-  padding: 0px 10px;
+  padding: 5px 10px;
   display: table-cell;
-  /*border-right:1px solid #d2d2d2;*/
-  height: 70px;
-  vertical-align: middle;
+  /*border-right:1px solid #d2d2d2;
+            height:70px;
+            vertical-align: middle;*/
+
   /*a:hover, a.selected{                    
                text-decoration: none;
                border-top: 1px solid @primaryColorHover;               
